--- a/pages/quienes somos.html
+++ b/pages/quienes somos.html
@@ -5,21 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100;1,300&display=swap" rel="stylesheet">
+
+    <title>Viniloversus</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
+    <header class="header margen">
+        <div class="logo">
+            <a href="/" class="linklogo">
+                <img src="/imagenes/vinilologo.jpg" alt="imagen">
+
+            </a>
+        </div>
+    </header>
+   
+        <nav class="navbar margen">
+            <ul class="menuprincipal">
                 <li><a href="../index.html"> Inicio </a></li>
                 <li><a href="./contactos.html"> Contactos </a></li>
                 <li><a href="./productos.html"> Productos </a></li>
                 <li><a href="./sucursales.html"> Sucursales </a> </li>
             </ul>
         </nav>
-    </header>
+    
 
     <h1>Quienes somos</h1>
-
+<section>
+    <ul class="caja"> 
+        <li>Clases de programación</li>
+        <li>Compras</li>
+        <li>Acampar</li>
+    </ul>
+</section>
 </body>
 </html>
