--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,24 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css"> 
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100;1,300&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Viniloversus</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
+    <header class="header margen">
+        <div class="logo">
+            <a href="/" class="linklogo">
+                <img src="/imagenes/vinilologo.jpg" alt="imagen">
+
+            </a>
+        </div>
+    </header>
+   
+        <nav class="navbar margen">
+            <ul class="menuprincipal">
                 <li><a href="../index.html"> Inicio </a></li>
                 <li><a href="./contactos.html"> Contactos </a></li>
                 <li><a href="./quienes somos.html"> Quiénes somos </a></li>
                 <li><a href="./sucursales.html"> Sucursales </a> </li>
             </ul>
         </nav>
-    </header>
+    
+
     <main>
         <h1 class="micolor"> 
             Formulario de Productos
