--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -5,25 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100;1,300&display=swap" rel="stylesheet">
+
+    <title>Viniloversus</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
+    <header class="header margen">
+        <div class="logo">
+            <a href="/" class="linklogo">
+                <img src="/imagenes/vinilologo.jpg" alt="imagen">
+
+            </a>
+        </div>
+    </header>
+   
+        <nav class="navbar margen">
+            <ul class="menuprincipal">
                 <li><a href="../index.html"> Inicio </a></li>
                 <li><a href="./contactos.html"> Contactos</a> </li>
                 <li><a href="./productos.html"> Productos </a></li>
                 <li><a href="./quienes somos.html"> Quiénes somos </a></li>
             </ul>
         </nav>
-        </header>
-    <h1>SUCURSALES</h1>
+        
+        <h1>SUCURSALES</h1>
     <main>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/m4xan3sNEY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            <audio src=""></audio>
-        </div>
-        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/es1S2U1Ps4Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>           
             <audio src=""></audio>
         </div>
     </main>
