--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -17,7 +17,7 @@
     <header class="header margen">
         <div class="logo">
             <a href="/" class="linklogo">
-                <img src="/imagenes/vinilologo.jpg" alt="imagen">
+                <img src="../imagenes/vinilologo.jpg" alt="imagen">
 
             </a>
         </div>
