--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -28,6 +28,7 @@
    
         <nav class="navbar margen">
             <ul class="menuprincipal">
+                <li> <a href="../index.html"> Inicio </a></li>
                 <li> <a href="biografia.html"> Biografía </a></li>
                 <li> <a href="discografia.html"> Discografía </a></li>
                 <li> <a href="tour.html"> Tour </a></li>
@@ -84,6 +85,17 @@
             </ol>
         </section>
     </main>
-    
+
+     <footer class="footer">
+        <p> <a href="https://www.facebook.com/VINILOVERSUS"> <img src="../imagenes/logo_Facebook.jpg" width="50" height="50"></a> 
+            <a href="https://www.instagram.com/viniloversus"> <img src="../imagenes/logo_Instagram.jpg" width="50" height="50"></a> 
+            <a href="https://www.twitter.com/VINILOVERSUS"> <img src="../imagenes/Logo_Twitter.jpg" width="50" height="50"></a> 
+            <a href="https://www.youtube.com/viniloversus"> <img src="../imagenes/logo_yotube.jpg" width="50" height="50"></a> 
+            <a href="https://www.tiktok.com/@viniloversus"> <img src="../imagenes/logo_tiktok.jpg" width="50" height="50"></a>
+        </p>
+        <address> <h5>Realizado por Gabriel Quispe en Buenos Aires - Capital ::: &copy; 2022 </h5></address>
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJTKXCfKtqtCffktZLXHrZScZgGWqjJWSWxJPCfBxJhsZtsdBVTHSTqgbHqJFkLdjGgLBcg" target="_blank">Clicka para enviar email </a>
+    </footer>
+
 </body>
 </html>
