--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
     <footer class="footer">
-        <p> <a href="https://www.facebook.com/VINILOVERSUS"> <img src="./imagenes/logo_Facebook.jpg" width="50" height="50"></a> 
-            <a href="https://www.instagram.com/viniloversus"> <img src="./imagenes/logo_Instagram.jpg" width="50" height="50"></a> 
-            <a href="https://www.twitter.com/VINILOVERSUS"> <img src="./imagenes/Logo_Twitter.jpg" width="50" height="50"></a> 
-            <a href="https://www.youtube.com/viniloversus"> <img src="./imagenes/logo_yotube.jpg" width="50" height="50"></a> 
-            <a href="https://www.tiktok.com/@viniloversus"> <img src="./imagenes/logo_tiktok.jpg" width="50" height="50"></a>
+        <p> <a href="https://www.facebook.com/VINILOVERSUS"> <img src="/imagenes/logo_Facebook.jpg" width="50" height="50"></a> 
+            <a href="https://www.instagram.com/viniloversus"> <img src="/imagenes/logo_Instagram.jpg" width="50" height="50"></a> 
+            <a href="https://www.twitter.com/VINILOVERSUS"> <img src="/imagenes/Logo_Twitter.jpg" width="50" height="50"></a> 
+            <a href="https://www.youtube.com/viniloversus"> <img src="/imagenes/logo_yotube.jpg" width="50" height="50"></a> 
+            <a href="https://www.tiktok.com/@viniloversus"> <img src="/imagenes/logo_tiktok.jpg" width="50" height="50"></a>
         </p>
         <address> <h5>Realizado por Gabriel Quispe en Buenos Aires - Capital ::: &copy; 2022 </h5></address>
         <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJTKXCfKtqtCffktZLXHrZScZgGWqjJWSWxJPCfBxJhsZtsdBVTHSTqgbHqJFkLdjGgLBcg" target="_blank">Clicka para enviar email </a>
