--- a/pages/tour.html
+++ b/pages/tour.html
@@ -38,7 +38,7 @@
     <main class="micolor">
         <div class="caja contenedor1">
             
-            <h2>
+            <h2 class="fuente">
                 CARACAS
             </h2>
             <p style="text-align: center">
@@ -53,7 +53,7 @@
 
                                   
         <div class="caja contenedor2">
-            <h2>
+            <h2 class="fuente">
                 MIAMI
             </h2>
             <p>           
