--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <div class="album py-5 bg-light" style="background-image: url(./imagenes/fondohuellasrosa.png)">
      <h2 style="text-align: center">
-      <a class="btn btn-lg btn-dark" href="/pages/productos.html">NUESTROS PRODUCTOS</a></p> 
+      <a class="btn btn-lg btn-dark" href="./pages/productos.html">NUESTROS PRODUCTOS</a></p> 
     </h2>
 
         
