--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
+      <span class="visually-hidden"></span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
+      <span class="visually-hidden"></span>
     </button>
   </div>
  
@@ -157,7 +157,7 @@
 
 <div class="album py-5 bg-light" style="background-image: url(./imagenes/fondohuellasrosa.png)">
      <h2 style="text-align: center">
-      <a class="btn btn-lg btn-dark" href="./pages/productos.html">NUESTROS PRODUCTOS</a></p> 
+      <a class="btn btn-lg btn-dark" href="./pages/productos.html">NUESTROS PRODUCTOS</a>
     </h2>
 
         
