--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1"><b>ALFOMBRA DE OLFATO</b></h2>
 
-            <div class="card-body" style="">
+            <div class="card-body">
                   Es una pieza textil que simula una alfombra, en la que se esconden premios para que el perro los busque. <br>
                   
                                  
@@ -212,7 +212,7 @@
             <h2 class="featurette-heading fw-normal lh-1"><b>DISPENSADORES</b></h2>
 
             <div class="card-body">
-                <p class="card-text"><b>DISPENSADORES<br></b> 
+                <p class="card-text">
                   Juguete dispensador de comida rellenable que funciona como dispensador de croquetas y promueve la estimulación mental,
                   material de primera calidad y resistentes<br>
                     <b>Beneficios<br></b>
@@ -256,7 +256,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1"><b>SOGAS</b></h2>
             <div class="card-body" >
-                <p class="card-text"><b>SOGAS<br></b> 
+                <p class="card-text">
                   ¡Mucho más que una cuerda! Un juego de tira y afloja, es ideal para crear un vínculo con tu perro a través del juego.<br>
                   Viene en cuatro medidas y diferentes grosores dependiendo la mandíbula de tu perro.<br>
                   Un juguete de dentición para cachorros o un analgésico para perros adultos.
@@ -301,7 +301,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading fw-normal lh-1"><b>LAMETONAS<br></b> </h2>
             <div class="card-body">
-                <p class="card-text"><b>LAMETONAS<br></b> 
+                <p class="card-text"> 
                     Ideal para cuando los dejamos solos y queremos que se entretengan. Recomendación: usarlo en las esquinas ya que no son antideslizantes.
                     <br>
                    Facil de lavar, hecho de silicona dura<br><b>Beneficios<br></b>Todo perro sea el tamaño que fuera debería tener una lametona porque sirve para relajarlos y mantenerlos ocupados.
@@ -345,7 +345,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1"><b>MORDEDORES</b></h2>
-            <div class="card-body" style="position: relative; left: 20%; top: 5%; text-align: center; font-size:large">
+            <div class="card-body">
                 <p class="card-text">
                   A los perros les encanta morder, es un comportamiento natural. Por eso, muchos canes disfrutan con los juguetes mordedores que, además, evitan destrozos en la casa. <br>
                     <b>Beneficios<br></b>
@@ -389,7 +389,7 @@
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading fw-normal lh-1"><b>P/ PASEO</b></h2>
               <div class="card-body">
-                <p class="card-text"><b>P/ PASEO<br></b> 
+                <p class="card-text">
                   Como sabemos que tu mascota se merece lo mejor, a continuación te mostraremos algunos articulos para el paseo de tu mascota.<br>
                  Por mencionar algunos tenemos correas largas y cortas, pretales, plato plegable dispensador de agua/comida, bolsitas, y más. <br>
                  <b>Beneficios<br></b>
